[gd_scene load_steps=2 format=3 uid="uid://4w2n3dlf02b7"]

[ext_resource type="Script" path="res://addons/keymap_screen/keymap_screen.gd" id="1"]

[node name="KeymapScreen" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SearchEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Search Actions..."
clear_button_enabled = true

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
hide_root = true

[node name="ReassignConfirmationDialog" type="ConfirmationDialog" parent="."]

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="text_changed" from="VBoxContainer/SearchEdit" to="." method="_on_SearchEdit_text_changed"]
[connection signal="button_clicked" from="VBoxContainer/Tree" to="." method="_on_tree_button_clicked"]
[connection signal="item_collapsed" from="VBoxContainer/Tree" to="." method="_on_Tree_item_collapsed"]
[connection signal="confirmed" from="ReassignConfirmationDialog" to="." method="_on_ReassignConfirmationDialog_confirmed"]
[connection signal="visibility_changed" from="ReassignConfirmationDialog" to="." method="_on_reassign_confirmation_dialog_visibility_changed"]
